# zigpy-cli

./: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish-to-pypi.yml
tests/: test_common.py
zigpy_cli/: __main__.py  cli.py  common.py  const.py  database.py  ota.py  pcap.py  radio.py  utils.py
