[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "zigpy-cli"
dynamic = ["version"]
description = "Unified command line interface for zigpy radios"
urls = {repository = "https://github.com/zigpy/zigpy-cli"}
authors = [
    {name = "puddly", email = "puddly3@gmail.com"}
]
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
dependencies = [
    "click",
    "coloredlogs",
    "scapy",
    "zigpy>=0.55.0",
    "bellows>=0.35.1",
    "zigpy-deconz>=0.21.0",
    "zigpy-xbee>=0.18.0",
    "zigpy-zigate>=0.11.0",
    "zigpy-znp>=0.11.1"
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[project.optional-dependencies]
testing = [
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.8.2",
    "pytest-cov>=3.0.0",
]

[tool.setuptools-git-versioning]
enabled = true

[project.scripts]
zigpy = "zigpy_cli.__main__:cli"


[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
src = ["zigpy_cli", "tests"]

[tool.ruff.isort]
known-first-party = ["zigpy_cli", "tests"]
